welcomeapp/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-deployment
  namespace: nexus
  labels:
    app: helloapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - name: helloapp
        image: k8s.mareklaskowski.pl/repo/marek_helloapp:0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 
      imagePullSecrets:
      - name: myrepo
