welcomeapp/srv_cIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-cip-ns-nexus
  namespace: nexus
spec:
  selector:
    app: helloapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
